--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "zeyra",
-  "version": "1.0.1",
-  "description": "WebCrypto helper for generating JWK keysets plus AES-GCM encryption and ECDSA signing agents.",
+  "version": "1.1.0",
+  "description": "Managed WebCrypto helpers for AES-GCM + ECDSA JWK keysets with storage-ready cluster APIs.",
   "keywords": [
     "webcrypto",
     "aes-gcm",
     "ecdsa",
     "jwk",
     "encryption",
-    "signature"
+    "signature",
+    "cluster",
+    "keyset",
+    "base64url",
+    "compression",
+    "storage",
+    "transport"
   ],
   "license": "MIT",
   "type": "module",
@@ -27,7 +33,7 @@
   },
   "homepage": "https://github.com/jortsupetterson/zeyra#readme",
   "dependencies": {
-    "bytecodec": "^1.2.1"
+    "bytecodec": "^1.3.0"
   },
   "engines": {
     "node": ">=18"
