first steps towards a new version

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "keyset",
     "compression",
     "bytecodec",
-    "typescript"
+    "typescript",
+    "z-base"
   ],
   "license": "MIT",
   "type": "module",
