--- a/package.json
+++ b/package.json
@@ -1,9 +1,23 @@
 {
   "name": "@z-base/cryptosuite",
-  "version": "1.0.0",
-  "description": "JS/TS WebCrypto wrappers for encrypt/decrypt, sign/verify, and wrap/unwrap",
+  "version": "0.0.0",
+  "description": "Developer-experience-first WebCrypto toolkit with declarative APIs for encryption, signing, key wrapping, and opaque identifiers.",
   "keywords": [
-    "bytecodec",
+    "cryptography",
+    "webcrypto",
+    "crypto",
+    "encryption",
+    "decryption",
+    "signing",
+    "verification",
+    "key-wrap",
+    "key-unwrap",
+    "jwk",
+    "aes-gcm",
+    "hmac",
+    "ed25519",
+    "rsa-oaep",
+    "opaque-identifier",
     "typescript",
     "z-base"
   ],
@@ -12,9 +26,11 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "format": "prettier . --write",
     "build": "tsc -p tsconfig.json",
     "test": "npm run build && node test/run-coverage.mjs && node test/e2e/run.mjs",
     "bench": "npm run build && node benchmark/bench.js",
+    "prepare": "husky",
     "prepublishOnly": "npm run test && npm run bench"
   },
   "c8": {
@@ -38,13 +54,18 @@
   },
   "homepage": "https://github.com/z-base/cryptosuite#readme",
   "dependencies": {
-    "bytecodec": "^3.0.1"
+    "@z-base/bytecodec": "^1.0.7"
   },
   "devDependencies": {
+    "@commitlint/cli": "^20.3.1",
+    "@commitlint/config-conventional": "^20.3.1",
     "@playwright/test": "^1.58.0",
     "@types/node": "^25.0.10",
     "c8": "^10.1.3",
+    "fast-glob": "^3.3.3",
+    "husky": "^9.1.7",
     "playwright": "^1.58.0",
+    "prettier": "^3.8.1",
     "typescript": "^5.6.3"
   },
   "engines": {
